--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <script type="text/javascript">
         
-      // Gets a handle to the element with id canvasOne.
+      // Gets a handle to the element with id canvasOne. Ian
       var canvas = document.getElementById("canvas");
       // Get a 2D context for the canvas.
       var ctx = canvas.getContext("2d");
